--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -43,7 +43,7 @@
 	.event {
 		grid-column: 1/2;
 		grid-row: 5;
-		max-width: 75%;
+		max-width: 100%;
 		padding: 2%;
 	}
 	
@@ -82,7 +82,7 @@
 		width: 100%;
 		margin: auto;
 		display: block;
-		height: 100%;
+		height: fit-content;
 		grid-column: 1/-1;
 		grid-row: 1/-1;
 	}
